Fix ADaPT inputs formatting (not completely yet), implement a simpler planner, tweak base strategy class a little

--- a/environments/alfworld/adapt.ipynb
+++ b/environments/alfworld/adapt.ipynb
@@ -40,8 +40,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-23T15:22:53.492276Z",
-     "start_time": "2024-04-23T15:22:51.241343Z"
+     "end_time": "2024-04-24T09:50:25.677462Z",
+     "start_time": "2024-04-24T09:50:23.448218Z"
     }
    },
    "id": "917b334526ae1418",
@@ -68,8 +68,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-23T15:22:53.510692Z",
-     "start_time": "2024-04-23T15:22:53.492741Z"
+     "end_time": "2024-04-24T09:50:25.696826Z",
+     "start_time": "2024-04-24T09:50:25.678452Z"
     }
    },
    "id": "add6277843d9e0d5",
@@ -99,7 +99,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 8810/8810 [00:03<00:00, 2791.93it/s]"
+      "100%|██████████| 8810/8810 [00:03<00:00, 2827.99it/s]"
      ]
     },
     {
@@ -132,8 +132,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-23T15:22:56.919358Z",
-     "start_time": "2024-04-23T15:22:53.511921Z"
+     "end_time": "2024-04-24T09:50:29.071017Z",
+     "start_time": "2024-04-24T09:50:25.697041Z"
     }
    },
    "id": "a79748e60e33a68c",
@@ -161,8 +161,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-23T15:22:57.613537Z",
-     "start_time": "2024-04-23T15:22:56.919524Z"
+     "end_time": "2024-04-24T09:50:29.588448Z",
+     "start_time": "2024-04-24T09:50:29.070262Z"
     }
    },
    "id": "e6feb0742d5fd134",
@@ -204,8 +204,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-23T15:22:57.640380Z",
-     "start_time": "2024-04-23T15:22:57.614143Z"
+     "end_time": "2024-04-24T09:50:29.605900Z",
+     "start_time": "2024-04-24T09:50:29.587882Z"
     }
    },
    "id": "95866c282598a829",
@@ -250,8 +250,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-23T15:22:57.733390Z",
-     "start_time": "2024-04-23T15:22:57.633775Z"
+     "end_time": "2024-04-24T09:50:29.704515Z",
+     "start_time": "2024-04-24T09:50:29.607028Z"
     }
    },
    "id": "979177816823c6a7",
@@ -262,7 +262,10 @@
    "source": [
     "### Planner\n",
     "\n",
-    "Default Planner is powered by any strategy from the library. By default, a simple one is used (see `planning_library/strategies/simple/simple_strategy.py` for more details)."
+    "Planner can either be:\n",
+    "\n",
+    "* `agent`: llm with tools, can be powered by any strategy from the library. By default, a simple one is used (see `planning_library/strategies/simple/simple_strategy.py` for more details).\n",
+    "* `simple`: a single call to llm."
    ],
    "metadata": {
     "collapsed": false
@@ -273,7 +276,7 @@
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "planner = ADaPTPlanner.create_simple_strategy(llm=ChatOpenAI(model=model_name, temperature=temperature),\n",
+    "agent_planner = ADaPTPlanner.create_agent_planner(llm=ChatOpenAI(model=model_name, temperature=temperature),\n",
     "                                             parser_name=\"openai-tools\", \n",
     "                                                user_message=dedent(\"\"\"\n",
     "            Here is the essence of the original task:\n",
@@ -285,11 +288,33 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-23T15:22:57.760952Z",
-     "start_time": "2024-04-23T15:22:57.733454Z"
+     "end_time": "2024-04-24T09:49:04.853127Z",
+     "start_time": "2024-04-24T09:49:04.823573Z"
     }
    },
    "id": "7c15cf73c24ab3f4",
+   "execution_count": 7
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "simple_planner = ADaPTPlanner.create_simple_planner(llm=ChatOpenAI(model=model_name, temperature=temperature),\n",
+    "                                                user_message=dedent(\"\"\"\n",
+    "            Here is the essence of the original task:\n",
+    "\n",
+    "            {inputs}\n",
+    "            \"\"\"),\n",
+    "            executor_parser_name=\"openai-tools\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-04-24T09:50:29.733491Z",
+     "start_time": "2024-04-24T09:50:29.704555Z"
+    }
+   },
+   "id": "e682b3c778b7973b",
    "execution_count": 7
   },
   {
@@ -306,10 +331,9 @@
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "adapt = ADaPTStrategy(\n",
-    "    action_executor=action_executor,\n",
+    "agent_planner_adapt = ADaPTStrategy(\n",
     "    executor=executor,\n",
-    "    planner=planner,\n",
+    "    planner=agent_planner,\n",
     "    max_depth=max_depth,\n",
     "    return_intermediate_steps=True,\n",
     "    return_finish_log=True,\n",
@@ -318,11 +342,135 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-23T15:22:57.778711Z",
-     "start_time": "2024-04-23T15:22:57.761338Z"
+     "end_time": "2024-04-24T09:47:51.740304Z",
+     "start_time": "2024-04-24T09:47:51.721891Z"
     }
    },
    "id": "d7c2708702ec7712",
+   "execution_count": 9
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "\u001B[1m> Entering new ADaPTStrategy chain...\u001B[0m\n",
+      "\n",
+      "\n",
+      "\u001B[1m> Entering new SimpleStrategy chain...\u001B[0m\n",
+      "\u001B[32;1m\u001B[1;3m\u001B[0m\n",
+      "\n",
+      "\u001B[1m> Finished chain.\u001B[0m\n",
+      "\n",
+      "\n",
+      "\u001B[1m> Entering new SimpleStrategy chain...\u001B[0m\n",
+      "\u001B[32;1m\u001B[1;3mI have constructed a step-by-step plan with an \"and\" aggregation logic to successfully solve the task of putting a pencil on the shelf:\n",
+      "\n",
+      "1. Check if there is a pencil on the desk 1.\n",
+      "2. Put the pencil from desk 1 onto shelf 1.\n",
+      "\n",
+      "The plan requires the successful completion of both subtasks in order to achieve the goal. Feel free to proceed with the execution of the plan.\u001B[0m\n",
+      "\n",
+      "\u001B[1m> Finished chain.\u001B[0m\n",
+      "\n",
+      "\n",
+      "\u001B[1m> Entering new SimpleStrategy chain...\u001B[0m\n",
+      "\u001B[32;1m\u001B[1;3mTask completed.\u001B[0m\n",
+      "\n",
+      "\u001B[1m> Finished chain.\u001B[0m\n",
+      "\n",
+      "\n",
+      "\u001B[1m> Entering new SimpleStrategy chain...\u001B[0m\n",
+      "\u001B[32;1m\u001B[1;3m\u001B[0m\n",
+      "\n",
+      "\u001B[1m> Finished chain.\u001B[0m\n",
+      "\n",
+      "\n",
+      "\u001B[1m> Entering new SimpleStrategy chain...\u001B[0m\n",
+      "\u001B[32;1m\u001B[1;3mI have formulated a step-by-step plan to solve the task successfully:\n",
+      "1. Take the pencil from desk 1.\n",
+      "2. Put the pencil onto shelf 1.\n",
+      "\n",
+      "The plan follows the logic that all subtasks must be completed successfully in order to consider the task solved.\u001B[0m\n",
+      "\n",
+      "\u001B[1m> Finished chain.\u001B[0m\n",
+      "\n",
+      "\n",
+      "\u001B[1m> Entering new SimpleStrategy chain...\u001B[0m\n",
+      "\u001B[32;1m\u001B[1;3m\u001B[0m\n",
+      "\n",
+      "\u001B[1m> Finished chain.\u001B[0m\n",
+      "\n",
+      "\n",
+      "\u001B[1m> Entering new SimpleStrategy chain...\u001B[0m\n",
+      "\u001B[32;1m\u001B[1;3mI have added a subtask to take the pencil from desk 1 at position 0 in the plan. The aggregation logic is set to \"and\", meaning all subtasks must be completed successfully for the task to be considered solved.\u001B[0m\n",
+      "\n",
+      "\u001B[1m> Finished chain.\u001B[0m\n",
+      "\n",
+      "\n",
+      "\u001B[1m> Entering new SimpleStrategy chain...\u001B[0m\n",
+      "\u001B[32;1m\u001B[1;3m\u001B[0m\n",
+      "\n",
+      "\u001B[1m> Finished chain.\u001B[0m\n",
+      "\n",
+      "\n",
+      "\u001B[1m> Entering new SimpleStrategy chain...\u001B[0m\n",
+      "\u001B[32;1m\u001B[1;3mI have added the first subtask to take the pencil from desk 1, and set the aggregation mode to \"and\" to ensure that all subtasks need to be successfully completed to solve the task.\u001B[0m\n",
+      "\n",
+      "\u001B[1m> Finished chain.\u001B[0m\n",
+      "\u001B[32;1m\u001B[1;3mCouldn't solve the task. Last log: Couldn't solve the task. Last log: Couldn't solve the task. Last log: Couldn't solve the task. Last log: Maximum decomposition depth reached.\u001B[0m\n",
+      "\n",
+      "\u001B[1m> Finished chain.\u001B[0m\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": "{'inputs': {'inputs': '-= Welcome to TextWorld, ALFRED! =-\\n\\nYou are in the middle of a room. Looking quickly around you, you see a bed 1, a cabinet 4, a cabinet 3, a cabinet 2, a cabinet 1, a desk 1, a drawer 2, a drawer 1, a garbagecan 1, a shelf 1, and a sidetable 1.\\n\\nYour task is to: put some pencil on shelf.'},\n 'intermediate_steps': [[(OpenAIToolAgentAction(tool='look', tool_input={}, log='\\nInvoking: `look` with `{}`\\n\\n\\n', message_log=[AIMessageChunk(content='', additional_kwargs={'tool_calls': [{'index': 0, 'id': 'call_2r8sx6QR3ZgHeW0O8MlO4a8e', 'function': {'arguments': '{}', 'name': 'look'}, 'type': 'function'}]})], tool_call_id='call_2r8sx6QR3ZgHeW0O8MlO4a8e'),\n    {'observation': 'You are facing the cabinet 3, and shelf 1. Next to it, you see nothing.',\n     'reward': 0,\n     'terminated': False,\n     'truncated': False,\n     'info': {}}),\n   (OpenAIToolAgentAction(tool='look', tool_input={}, log='\\nInvoking: `look` with `{}`\\n\\n\\n', message_log=[AIMessageChunk(content='', additional_kwargs={'tool_calls': [{'index': 0, 'id': 'call_2r8sx6QR3ZgHeW0O8MlO4a8e', 'function': {'arguments': '{}', 'name': 'look'}, 'type': 'function'}]})], tool_call_id='call_2r8sx6QR3ZgHeW0O8MlO4a8e'),\n    {'observation': 'You are facing the cabinet 3, and shelf 1. Next to it, you see nothing.',\n     'reward': 0,\n     'terminated': False,\n     'truncated': False,\n     'info': {}})]],\n 'finish_log': [\"Couldn't solve the task. Last log: Couldn't solve the task. Last log: Couldn't solve the task. Last log: Couldn't solve the task. Last log: Maximum decomposition depth reached.\"]}"
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "agent_planner_adapt.invoke(\n",
+    "    {\"inputs\": {\"inputs\": obs}}\n",
+    ")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-04-24T09:48:22.475556Z",
+     "start_time": "2024-04-24T09:47:51.740901Z"
+    }
+   },
+   "id": "8d1b5178959c06",
+   "execution_count": 10
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "simple_planner_adapt = ADaPTStrategy(\n",
+    "    executor=executor,\n",
+    "    planner=simple_planner,\n",
+    "    max_depth=max_depth,\n",
+    "    return_intermediate_steps=True,\n",
+    "    return_finish_log=True,\n",
+    ")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-04-24T09:50:32.745288Z",
+     "start_time": "2024-04-24T09:50:32.719793Z"
+    }
+   },
+   "id": "4efce110755d134e",
    "execution_count": 8
   },
   {
@@ -344,65 +492,19 @@
       "\n",
       "\n",
       "\u001B[1m> Entering new SimpleStrategy chain...\u001B[0m\n",
-      "\u001B[32;1m\u001B[1;3mI have devised a step-by-step plan with an \"and\" aggregation logic to successfully solve the task:\n",
-      "\n",
-      "1. Head to the shelf 1 and observe the items on it.\n",
-      "2. Put the pencil on the shelf 1.\n",
-      "\n",
-      "This plan ensures that both subtasks need to be completed successfully in order to consider the task as solved.\u001B[0m\n",
+      "\u001B[32;1m\u001B[1;3m\u001B[0m\n",
       "\n",
       "\u001B[1m> Finished chain.\u001B[0m\n",
       "\n",
       "\n",
       "\u001B[1m> Entering new SimpleStrategy chain...\u001B[0m\n",
-      "\u001B[32;1m\u001B[1;3mTask completed.\u001B[0m\n",
+      "\u001B[32;1m\u001B[1;3mIt seems I couldn't go to shelf 1. Let me try again.\u001B[0m\n",
       "\n",
       "\u001B[1m> Finished chain.\u001B[0m\n",
       "\n",
       "\n",
       "\u001B[1m> Entering new SimpleStrategy chain...\u001B[0m\n",
-      "\u001B[32;1m\u001B[1;3mIt seems like I couldn't put the pencil on shelf 1. Let me try again.\u001B[0m\n",
-      "\n",
-      "\u001B[1m> Finished chain.\u001B[0m\n",
-      "\n",
-      "\n",
-      "\u001B[1m> Entering new SimpleStrategy chain...\u001B[0m\n",
-      "\u001B[32;1m\u001B[1;3mI have constructed a step-by-step plan with \"and\" aggregation logic to successfully solve the task of putting the pencil on shelf 1. The plan is as follows:\n",
-      "\n",
-      "1. Put the pencil on shelf 1.\n",
-      "\n",
-      "This plan will ensure that each subtask is executed sequentially, and the task will only be considered solved if all subtasks are successfully completed.\u001B[0m\n",
-      "\n",
-      "\u001B[1m> Finished chain.\u001B[0m\n",
-      "\n",
-      "\n",
-      "\u001B[1m> Entering new SimpleStrategy chain...\u001B[0m\n",
-      "\u001B[32;1m\u001B[1;3mIt seems like there was an issue putting the pencil on shelf 1. Let me try that again.\u001B[0m\n",
-      "\n",
-      "\u001B[1m> Finished chain.\u001B[0m\n",
-      "\n",
-      "\n",
-      "\u001B[1m> Entering new SimpleStrategy chain...\u001B[0m\n",
-      "\u001B[32;1m\u001B[1;3mI have created a step-by-step plan with the following subtask:\n",
-      "\n",
-      "1. Place the pencil on shelf 1.\n",
-      "\n",
-      "The plan is set to aggregate the results with an \"and\" logic, meaning that all subtasks must be successfully completed for the task to be considered solved.\u001B[0m\n",
-      "\n",
-      "\u001B[1m> Finished chain.\u001B[0m\n",
-      "\n",
-      "\n",
-      "\u001B[1m> Entering new SimpleStrategy chain...\u001B[0m\n",
-      "\u001B[32;1m\u001B[1;3mIt seems I couldn't place the pencil on shelf 1. Let me try again.\u001B[0m\n",
-      "\n",
-      "\u001B[1m> Finished chain.\u001B[0m\n",
-      "\n",
-      "\n",
-      "\u001B[1m> Entering new SimpleStrategy chain...\u001B[0m\n",
-      "\u001B[32;1m\u001B[1;3mI have added the first subtask to the plan:\n",
-      "- Place the pencil on shelf 1.\n",
-      "\n",
-      "This subtask needs to be successfully completed in order to solve the original task.\u001B[0m\n",
+      "\u001B[32;1m\u001B[1;3m\u001B[0m\n",
       "\n",
       "\u001B[1m> Finished chain.\u001B[0m\n",
       "\u001B[32;1m\u001B[1;3mCouldn't solve the task. Last log: Couldn't solve the task. Last log: Couldn't solve the task. Last log: Couldn't solve the task. Last log: Maximum decomposition depth reached.\u001B[0m\n",
@@ -412,7 +514,7 @@
     },
     {
      "data": {
-      "text/plain": "{'inputs': {'inputs': '-= Welcome to TextWorld, ALFRED! =-\\n\\nYou are in the middle of a room. Looking quickly around you, you see a bed 1, a cabinet 4, a cabinet 3, a cabinet 2, a cabinet 1, a desk 1, a drawer 2, a drawer 1, a garbagecan 1, a shelf 1, and a sidetable 1.\\n\\nYour task is to: put some pencil on shelf.'},\n 'intermediate_steps': [[(OpenAIToolAgentAction(tool='goto', tool_input={'receptable_type': 'shelf', 'receptable_id': 1}, log=\"\\nInvoking: `goto` with `{'receptable_type': 'shelf', 'receptable_id': 1}`\\n\\n\\n\", message_log=[AIMessageChunk(content='', additional_kwargs={'tool_calls': [{'index': 0, 'id': 'call_5YrfsRApVcLBJyFIQMA8S8Cp', 'function': {'arguments': '{\"receptable_type\":\"shelf\",\"receptable_id\":1}', 'name': 'goto'}, 'type': 'function'}]})], tool_call_id='call_5YrfsRApVcLBJyFIQMA8S8Cp'),\n    {'observation': 'You arrive at loc 9. On the shelf 1, you see a keychain 2, and a pen 1.',\n     'reward': 0,\n     'terminated': False,\n     'truncated': False,\n     'info': {}}),\n   (OpenAIToolAgentAction(tool='goto', tool_input={'receptable_type': 'shelf', 'receptable_id': 1}, log=\"\\nInvoking: `goto` with `{'receptable_type': 'shelf', 'receptable_id': 1}`\\n\\n\\n\", message_log=[AIMessageChunk(content='', additional_kwargs={'tool_calls': [{'index': 0, 'id': 'call_5YrfsRApVcLBJyFIQMA8S8Cp', 'function': {'arguments': '{\"receptable_type\":\"shelf\",\"receptable_id\":1}', 'name': 'goto'}, 'type': 'function'}]})], tool_call_id='call_5YrfsRApVcLBJyFIQMA8S8Cp'),\n    {'observation': 'You arrive at loc 9. On the shelf 1, you see a keychain 2, and a pen 1.',\n     'reward': 0,\n     'terminated': False,\n     'truncated': False,\n     'info': {}})]],\n 'finish_log': [\"Couldn't solve the task. Last log: Couldn't solve the task. Last log: Couldn't solve the task. Last log: Couldn't solve the task. Last log: Maximum decomposition depth reached.\"]}"
+      "text/plain": "{'inputs': {'inputs': '-= Welcome to TextWorld, ALFRED! =-\\n\\nYou are in the middle of a room. Looking quickly around you, you see a bed 1, a cabinet 4, a cabinet 3, a cabinet 2, a cabinet 1, a desk 1, a drawer 2, a drawer 1, a garbagecan 1, a shelf 1, and a sidetable 1.\\n\\nYour task is to: put some pencil on shelf.'},\n 'intermediate_steps': [[]],\n 'finish_log': [\"Couldn't solve the task. Last log: Couldn't solve the task. Last log: Couldn't solve the task. Last log: Couldn't solve the task. Last log: Maximum decomposition depth reached.\"]}"
      },
      "execution_count": 9,
      "metadata": {},
@@ -420,18 +522,18 @@
     }
    ],
    "source": [
-    "adapt.invoke(\n",
+    "simple_planner_adapt.invoke(\n",
     "    {\"inputs\": {\"inputs\": obs}}\n",
     ")"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-23T15:23:27.467555Z",
-     "start_time": "2024-04-23T15:22:57.779285Z"
+     "end_time": "2024-04-24T09:50:47.930079Z",
+     "start_time": "2024-04-24T09:50:32.898494Z"
     }
    },
-   "id": "8d1b5178959c06",
+   "id": "bfcf7662db19240c",
    "execution_count": 9
   }
  ],
