Tweak action execution logic
Get rid of GymnasiumActionExecutor, since we already incapsulate all the logic of working with environment into tools

Switch to a special "meta" reset tool for resetting in all strategies

Update examples (except FrozenLake, todo)

--- a/environments/alfworld/adapt.ipynb
+++ b/environments/alfworld/adapt.ipynb
@@ -22,7 +22,16 @@
   },
   {
    "cell_type": "code",
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "import requests\n",
     "from environments.alfworld.common.environment import ALFWorldEnv\n",
@@ -31,7 +40,8 @@
     "from langchain_openai import ChatOpenAI\n",
     "from planning_library.strategies import ADaPTStrategy\n",
     "from planning_library.strategies.adapt.components import ADaPTPlanner, ADaPTExecutor\n",
-    "from planning_library.action_executors import GymnasiumActionExecutor\n",
+    "from planning_library.action_executors import LangchainActionExecutor, MetaTools\n",
+    "from planning_library.utils.gym_env_reset_tool import GymEnvResetTool\n",
     "from textwrap import dedent\n",
     "\n",
     "%load_ext autoreload\n",
@@ -40,12 +50,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-24T09:50:25.677462Z",
-     "start_time": "2024-04-24T09:50:23.448218Z"
+     "end_time": "2024-04-26T09:55:03.331747Z",
+     "start_time": "2024-04-26T09:55:03.306341Z"
     }
    },
    "id": "917b334526ae1418",
-   "execution_count": 1
+   "execution_count": 5
   },
   {
    "cell_type": "markdown",
@@ -68,12 +78,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-24T09:50:25.696826Z",
-     "start_time": "2024-04-24T09:50:25.678452Z"
+     "end_time": "2024-04-26T09:55:03.990181Z",
+     "start_time": "2024-04-26T09:55:03.970463Z"
     }
    },
    "id": "add6277843d9e0d5",
-   "execution_count": 2
+   "execution_count": 6
   },
   {
    "cell_type": "markdown",
@@ -99,7 +109,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 8810/8810 [00:03<00:00, 2827.99it/s]"
+      "100%|██████████| 8810/8810 [00:03<00:00, 2813.19it/s]"
      ]
     },
     {
@@ -127,17 +137,19 @@
     "    with open(\"utils/base_config.yaml\", \"wb\") as f:\n",
     "        f.write(response.content)\n",
     "\n",
-    "env = ALFWorldEnv(config_path=\"utils/base_config.yaml\")"
+    "env = ALFWorldEnv(config_path=\"utils/base_config.yaml\")\n",
+    "meta_tools = MetaTools(reset=GymEnvResetTool(env=env))\n",
+    "action_executor = LangchainActionExecutor(env.tools, meta_tools=meta_tools)"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-24T09:50:29.071017Z",
-     "start_time": "2024-04-24T09:50:25.697041Z"
+     "end_time": "2024-04-26T09:55:07.937069Z",
+     "start_time": "2024-04-26T09:55:04.620750Z"
     }
    },
    "id": "a79748e60e33a68c",
-   "execution_count": 3
+   "execution_count": 7
   },
   {
    "cell_type": "code",
@@ -161,12 +173,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-24T09:50:29.588448Z",
-     "start_time": "2024-04-24T09:50:29.070262Z"
+     "end_time": "2024-04-26T09:55:08.251850Z",
+     "start_time": "2024-04-26T09:55:07.937277Z"
     }
    },
    "id": "e6feb0742d5fd134",
-   "execution_count": 4
+   "execution_count": 8
   },
   {
    "cell_type": "markdown",
@@ -204,12 +216,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-24T09:50:29.605900Z",
-     "start_time": "2024-04-24T09:50:29.587882Z"
+     "end_time": "2024-04-26T09:55:10.085814Z",
+     "start_time": "2024-04-26T09:55:10.060199Z"
     }
    },
    "id": "95866c282598a829",
-   "execution_count": 5
+   "execution_count": 9
   },
   {
    "cell_type": "markdown",
@@ -235,27 +247,25 @@
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "action_executor = GymnasiumActionExecutor(env)\n",
     "executor = ADaPTExecutor.create_simple_strategy(llm=ChatOpenAI(model=model_name, temperature=temperature),\n",
-    "                                                tools=env.tools,\n",
-    "                                             parser_name=\"openai-tools\", \n",
-    "                                                action_executor=action_executor,\n",
+    "                                             parser_name=\"openai-tools\",\n",
     "                                                user_message=dedent(\"\"\"\n",
     "            You are ALFRED, an intelligent agent navigating in a household.\n",
     "\n",
     "            {inputs}\"\"\"),      max_iterations=executor_max_iterations,\n",
     "                                                return_intermediate_steps=True,\n",
-    "                                                return_finish_log=True)"
+    "                                                return_finish_log=True,\n",
+    "                                                action_executor=action_executor)"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-24T09:50:29.704515Z",
-     "start_time": "2024-04-24T09:50:29.607028Z"
+     "end_time": "2024-04-26T09:56:27.197982Z",
+     "start_time": "2024-04-26T09:56:26.988634Z"
     }
    },
    "id": "979177816823c6a7",
-   "execution_count": 6
+   "execution_count": 10
   },
   {
    "cell_type": "markdown",
@@ -288,12 +298,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-24T09:49:04.853127Z",
-     "start_time": "2024-04-24T09:49:04.823573Z"
+     "end_time": "2024-04-26T09:56:28.545281Z",
+     "start_time": "2024-04-26T09:56:28.510826Z"
     }
    },
    "id": "7c15cf73c24ab3f4",
-   "execution_count": 7
+   "execution_count": 11
   },
   {
    "cell_type": "code",
@@ -310,12 +320,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-24T09:50:29.733491Z",
-     "start_time": "2024-04-24T09:50:29.704555Z"
+     "end_time": "2024-04-26T09:56:29.270904Z",
+     "start_time": "2024-04-26T09:56:29.237099Z"
     }
    },
    "id": "e682b3c778b7973b",
-   "execution_count": 7
+   "execution_count": 12
   },
   {
    "cell_type": "markdown",
@@ -342,12 +352,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-24T09:47:51.740304Z",
-     "start_time": "2024-04-24T09:47:51.721891Z"
+     "end_time": "2024-04-26T09:56:35.826852Z",
+     "start_time": "2024-04-26T09:56:35.801304Z"
     }
    },
    "id": "d7c2708702ec7712",
-   "execution_count": 9
+   "execution_count": 13
   },
   {
    "cell_type": "code",
@@ -362,24 +372,13 @@
       "\n",
       "\n",
       "\u001B[1m> Entering new SimpleStrategy chain...\u001B[0m\n",
-      "\u001B[32;1m\u001B[1;3m\u001B[0m\n",
+      "\u001B[32;1m\u001B[1;3mI tried to put the pencil on the shelf, but nothing happened. I will attempt to complete the task again.\u001B[0m\n",
       "\n",
       "\u001B[1m> Finished chain.\u001B[0m\n",
       "\n",
       "\n",
       "\u001B[1m> Entering new SimpleStrategy chain...\u001B[0m\n",
-      "\u001B[32;1m\u001B[1;3mI have constructed a step-by-step plan with an \"and\" aggregation logic to successfully solve the task of putting a pencil on the shelf:\n",
-      "\n",
-      "1. Check if there is a pencil on the desk 1.\n",
-      "2. Put the pencil from desk 1 onto shelf 1.\n",
-      "\n",
-      "The plan requires the successful completion of both subtasks in order to achieve the goal. Feel free to proceed with the execution of the plan.\u001B[0m\n",
-      "\n",
-      "\u001B[1m> Finished chain.\u001B[0m\n",
-      "\n",
-      "\n",
-      "\u001B[1m> Entering new SimpleStrategy chain...\u001B[0m\n",
-      "\u001B[32;1m\u001B[1;3mTask completed.\u001B[0m\n",
+      "\u001B[32;1m\u001B[1;3mI have set up the first subtask in the plan, which is to \"Pick up a pencil from the desk 1\" with the requirement to successfully complete this task. The aggregation mode is set to \"and\", meaning all subtasks need to be completed for the overall task to be considered successful. If you have any additional steps or adjustments you'd like to make, feel free to let me know!\u001B[0m\n",
       "\n",
       "\u001B[1m> Finished chain.\u001B[0m\n",
       "\n",
@@ -391,11 +390,19 @@
       "\n",
       "\n",
       "\u001B[1m> Entering new SimpleStrategy chain...\u001B[0m\n",
-      "\u001B[32;1m\u001B[1;3mI have formulated a step-by-step plan to solve the task successfully:\n",
-      "1. Take the pencil from desk 1.\n",
-      "2. Put the pencil onto shelf 1.\n",
+      "\u001B[32;1m\u001B[1;3mI have added a subtask to try picking up the pencil from desk 1.\u001B[0m\n",
       "\n",
-      "The plan follows the logic that all subtasks must be completed successfully in order to consider the task solved.\u001B[0m\n",
+      "\u001B[1m> Finished chain.\u001B[0m\n",
+      "\n",
+      "\n",
+      "\u001B[1m> Entering new SimpleStrategy chain...\u001B[0m\n",
+      "\u001B[32;1m\u001B[1;3mI couldn't pick up the pencil from desk 1. Let me try again.\u001B[0m\n",
+      "\n",
+      "\u001B[1m> Finished chain.\u001B[0m\n",
+      "\n",
+      "\n",
+      "\u001B[1m> Entering new SimpleStrategy chain...\u001B[0m\n",
+      "\u001B[32;1m\u001B[1;3mI have added the first step to attempt to take the pencil from desk 1. The plan will stop as soon as this subtask is successfully completed.\u001B[0m\n",
       "\n",
       "\u001B[1m> Finished chain.\u001B[0m\n",
       "\n",
@@ -407,19 +414,7 @@
       "\n",
       "\n",
       "\u001B[1m> Entering new SimpleStrategy chain...\u001B[0m\n",
-      "\u001B[32;1m\u001B[1;3mI have added a subtask to take the pencil from desk 1 at position 0 in the plan. The aggregation logic is set to \"and\", meaning all subtasks must be completed successfully for the task to be considered solved.\u001B[0m\n",
-      "\n",
-      "\u001B[1m> Finished chain.\u001B[0m\n",
-      "\n",
-      "\n",
-      "\u001B[1m> Entering new SimpleStrategy chain...\u001B[0m\n",
-      "\u001B[32;1m\u001B[1;3m\u001B[0m\n",
-      "\n",
-      "\u001B[1m> Finished chain.\u001B[0m\n",
-      "\n",
-      "\n",
-      "\u001B[1m> Entering new SimpleStrategy chain...\u001B[0m\n",
-      "\u001B[32;1m\u001B[1;3mI have added the first subtask to take the pencil from desk 1, and set the aggregation mode to \"and\" to ensure that all subtasks need to be successfully completed to solve the task.\u001B[0m\n",
+      "\u001B[32;1m\u001B[1;3mI have added the first subtask to the plan, which is attempting to go to desk 1. The aggregation logic is set to \"and\", meaning all subtasks need to be completed successfully for the original task to be considered solved.\u001B[0m\n",
       "\n",
       "\u001B[1m> Finished chain.\u001B[0m\n",
       "\u001B[32;1m\u001B[1;3mCouldn't solve the task. Last log: Couldn't solve the task. Last log: Couldn't solve the task. Last log: Couldn't solve the task. Last log: Maximum decomposition depth reached.\u001B[0m\n",
@@ -429,9 +424,9 @@
     },
     {
      "data": {
-      "text/plain": "{'inputs': {'inputs': '-= Welcome to TextWorld, ALFRED! =-\\n\\nYou are in the middle of a room. Looking quickly around you, you see a bed 1, a cabinet 4, a cabinet 3, a cabinet 2, a cabinet 1, a desk 1, a drawer 2, a drawer 1, a garbagecan 1, a shelf 1, and a sidetable 1.\\n\\nYour task is to: put some pencil on shelf.'},\n 'intermediate_steps': [[(OpenAIToolAgentAction(tool='look', tool_input={}, log='\\nInvoking: `look` with `{}`\\n\\n\\n', message_log=[AIMessageChunk(content='', additional_kwargs={'tool_calls': [{'index': 0, 'id': 'call_2r8sx6QR3ZgHeW0O8MlO4a8e', 'function': {'arguments': '{}', 'name': 'look'}, 'type': 'function'}]})], tool_call_id='call_2r8sx6QR3ZgHeW0O8MlO4a8e'),\n    {'observation': 'You are facing the cabinet 3, and shelf 1. Next to it, you see nothing.',\n     'reward': 0,\n     'terminated': False,\n     'truncated': False,\n     'info': {}}),\n   (OpenAIToolAgentAction(tool='look', tool_input={}, log='\\nInvoking: `look` with `{}`\\n\\n\\n', message_log=[AIMessageChunk(content='', additional_kwargs={'tool_calls': [{'index': 0, 'id': 'call_2r8sx6QR3ZgHeW0O8MlO4a8e', 'function': {'arguments': '{}', 'name': 'look'}, 'type': 'function'}]})], tool_call_id='call_2r8sx6QR3ZgHeW0O8MlO4a8e'),\n    {'observation': 'You are facing the cabinet 3, and shelf 1. Next to it, you see nothing.',\n     'reward': 0,\n     'terminated': False,\n     'truncated': False,\n     'info': {}})]],\n 'finish_log': [\"Couldn't solve the task. Last log: Couldn't solve the task. Last log: Couldn't solve the task. Last log: Couldn't solve the task. Last log: Maximum decomposition depth reached.\"]}"
+      "text/plain": "{'inputs': {'inputs': '-= Welcome to TextWorld, ALFRED! =-\\n\\nYou are in the middle of a room. Looking quickly around you, you see a bed 1, a cabinet 4, a cabinet 3, a cabinet 2, a cabinet 1, a desk 1, a drawer 2, a drawer 1, a garbagecan 1, a shelf 1, and a sidetable 1.\\n\\nYour task is to: put some pencil on shelf.'},\n 'intermediate_steps': [[]],\n 'finish_log': [\"Couldn't solve the task. Last log: Couldn't solve the task. Last log: Couldn't solve the task. Last log: Couldn't solve the task. Last log: Maximum decomposition depth reached.\"]}"
      },
-     "execution_count": 10,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -444,12 +439,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-24T09:48:22.475556Z",
-     "start_time": "2024-04-24T09:47:51.740901Z"
+     "end_time": "2024-04-26T09:57:02.892981Z",
+     "start_time": "2024-04-26T09:56:36.221827Z"
     }
    },
    "id": "8d1b5178959c06",
-   "execution_count": 10
+   "execution_count": 14
   },
   {
    "cell_type": "code",
