--- a/environments/game_of_24/tot_dfs.ipynb
+++ b/environments/game_of_24/tot_dfs.ipynb
@@ -40,6 +40,8 @@
     "from environments.game_of_24.environment import GameOf24Env\n",
     "import os\n",
     "from planning_library.strategies.tot_dfs.components import ThoughtEvaluator, ThoughtGenerator\n",
+    "from planning_library.action_executors import LangchainActionExecutor, MetaTools\n",
+    "from planning_library.utils.gym_env_reset_tool import GymEnvResetTool\n",
     "from textwrap import dedent\n",
     "\n",
     "%load_ext autoreload\n",
@@ -48,8 +50,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-17T17:01:49.125155Z",
-     "start_time": "2024-04-17T17:01:48.094919Z"
+     "end_time": "2024-04-26T09:49:23.689914Z",
+     "start_time": "2024-04-26T09:49:22.579083Z"
     }
    },
    "id": "c94d0bfae6ac52b7"
@@ -76,8 +78,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-17T17:01:49.135527Z",
-     "start_time": "2024-04-17T17:01:49.125568Z"
+     "end_time": "2024-04-26T09:49:23.701234Z",
+     "start_time": "2024-04-26T09:49:23.690887Z"
     }
    },
    "id": "7d8838345955d3c2"
@@ -96,13 +98,15 @@
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "env = GameOf24Env()"
+    "env = GameOf24Env()\n",
+    "meta_tools = MetaTools(reset=GymEnvResetTool(env=env))\n",
+    "action_executor = LangchainActionExecutor(env.tools, meta_tools=meta_tools)"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-17T17:01:49.146214Z",
-     "start_time": "2024-04-17T17:01:49.135746Z"
+     "end_time": "2024-04-26T09:49:23.769688Z",
+     "start_time": "2024-04-26T09:49:23.758190Z"
     }
    },
    "id": "d3c7e376d173b5b6",
@@ -145,8 +149,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-17T17:01:49.162016Z",
-     "start_time": "2024-04-17T17:01:49.146423Z"
+     "end_time": "2024-04-26T09:49:25.077166Z",
+     "start_time": "2024-04-26T09:49:25.064470Z"
     }
    },
    "id": "3b1ff5faf3a98a79"
@@ -201,8 +205,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-17T17:01:49.348388Z",
-     "start_time": "2024-04-17T17:01:49.323182Z"
+     "end_time": "2024-04-26T09:49:26.634978Z",
+     "start_time": "2024-04-26T09:49:26.603725Z"
     }
    },
    "id": "388cbde0cb39f2b0",
@@ -258,8 +262,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-17T17:01:50.123426Z",
-     "start_time": "2024-04-17T17:01:50.021810Z"
+     "end_time": "2024-04-26T09:49:27.777100Z",
+     "start_time": "2024-04-26T09:49:27.684343Z"
     }
    },
    "id": "d48ca4a0c5d0fe71",
@@ -302,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "outputs": [
     {
      "name": "stdout",
@@ -320,23 +324,16 @@
      "traceback": [
       "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
       "\u001B[0;31mIndexError\u001B[0m                                Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn[8], line 17\u001B[0m\n\u001B[1;32m      7\u001B[0m strategy_executor \u001B[38;5;241m=\u001B[39m TreeOfThoughtsDFSStrategy(\n\u001B[1;32m      8\u001B[0m     tools\u001B[38;5;241m=\u001B[39menv\u001B[38;5;241m.\u001B[39mtools,\n\u001B[1;32m      9\u001B[0m     action_executor\u001B[38;5;241m=\u001B[39maction_executor,\n\u001B[0;32m   (...)\u001B[0m\n\u001B[1;32m     14\u001B[0m     do_sorting\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mFalse\u001B[39;00m,\n\u001B[1;32m     15\u001B[0m )\n\u001B[1;32m     16\u001B[0m env\u001B[38;5;241m.\u001B[39mreset(options\u001B[38;5;241m=\u001B[39m{\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mnumbers\u001B[39m\u001B[38;5;124m\"\u001B[39m: [\u001B[38;5;241m1\u001B[39m, \u001B[38;5;241m1\u001B[39m, \u001B[38;5;241m4\u001B[39m, \u001B[38;5;241m6\u001B[39m]})\n\u001B[0;32m---> 17\u001B[0m \u001B[43mstrategy_executor\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43minvoke\u001B[49m\u001B[43m(\u001B[49m\u001B[43m{\u001B[49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[38;5;124;43mnumbers\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[43m:\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[38;5;124;43m1 1 4 6\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[43m}\u001B[49m\u001B[43m)\u001B[49m\n",
+      "Cell \u001B[0;32mIn[7], line 10\u001B[0m\n\u001B[1;32m      1\u001B[0m strategy_executor \u001B[38;5;241m=\u001B[39m TreeOfThoughtsDFSStrategy(\n\u001B[1;32m      2\u001B[0m     action_executor\u001B[38;5;241m=\u001B[39maction_executor,\n\u001B[1;32m      3\u001B[0m     max_iterations\u001B[38;5;241m=\u001B[39mmax_num_steps,\n\u001B[0;32m   (...)\u001B[0m\n\u001B[1;32m      7\u001B[0m     do_sorting\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mFalse\u001B[39;00m,\n\u001B[1;32m      8\u001B[0m )\n\u001B[1;32m      9\u001B[0m env\u001B[38;5;241m.\u001B[39mreset(options\u001B[38;5;241m=\u001B[39m{\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mnumbers\u001B[39m\u001B[38;5;124m\"\u001B[39m: [\u001B[38;5;241m1\u001B[39m, \u001B[38;5;241m1\u001B[39m, \u001B[38;5;241m4\u001B[39m, \u001B[38;5;241m6\u001B[39m]})\n\u001B[0;32m---> 10\u001B[0m \u001B[43mstrategy_executor\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43minvoke\u001B[49m\u001B[43m(\u001B[49m\u001B[43m{\u001B[49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[38;5;124;43mnumbers\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[43m:\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[38;5;124;43m1 1 4 6\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[43m}\u001B[49m\u001B[43m)\u001B[49m\n",
       "File \u001B[0;32m~/Library/Caches/pypoetry/virtualenvs/planning-library-q8r1q5f_-py3.11/lib/python3.11/site-packages/langchain/chains/base.py:163\u001B[0m, in \u001B[0;36mChain.invoke\u001B[0;34m(self, input, config, **kwargs)\u001B[0m\n\u001B[1;32m    161\u001B[0m \u001B[38;5;28;01mexcept\u001B[39;00m \u001B[38;5;167;01mBaseException\u001B[39;00m \u001B[38;5;28;01mas\u001B[39;00m e:\n\u001B[1;32m    162\u001B[0m     run_manager\u001B[38;5;241m.\u001B[39mon_chain_error(e)\n\u001B[0;32m--> 163\u001B[0m     \u001B[38;5;28;01mraise\u001B[39;00m e\n\u001B[1;32m    164\u001B[0m run_manager\u001B[38;5;241m.\u001B[39mon_chain_end(outputs)\n\u001B[1;32m    166\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m include_run_info:\n",
       "File \u001B[0;32m~/Library/Caches/pypoetry/virtualenvs/planning-library-q8r1q5f_-py3.11/lib/python3.11/site-packages/langchain/chains/base.py:153\u001B[0m, in \u001B[0;36mChain.invoke\u001B[0;34m(self, input, config, **kwargs)\u001B[0m\n\u001B[1;32m    150\u001B[0m \u001B[38;5;28;01mtry\u001B[39;00m:\n\u001B[1;32m    151\u001B[0m     \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_validate_inputs(inputs)\n\u001B[1;32m    152\u001B[0m     outputs \u001B[38;5;241m=\u001B[39m (\n\u001B[0;32m--> 153\u001B[0m         \u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43m_call\u001B[49m\u001B[43m(\u001B[49m\u001B[43minputs\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mrun_manager\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mrun_manager\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m    154\u001B[0m         \u001B[38;5;28;01mif\u001B[39;00m new_arg_supported\n\u001B[1;32m    155\u001B[0m         \u001B[38;5;28;01melse\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_call(inputs)\n\u001B[1;32m    156\u001B[0m     )\n\u001B[1;32m    158\u001B[0m     final_outputs: Dict[\u001B[38;5;28mstr\u001B[39m, Any] \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mprep_outputs(\n\u001B[1;32m    159\u001B[0m         inputs, outputs, return_only_outputs\n\u001B[1;32m    160\u001B[0m     )\n\u001B[1;32m    161\u001B[0m \u001B[38;5;28;01mexcept\u001B[39;00m \u001B[38;5;167;01mBaseException\u001B[39;00m \u001B[38;5;28;01mas\u001B[39;00m e:\n",
-      "File \u001B[0;32m~/PycharmProjects/planning-library/planning_library/strategies/base_strategy.py:136\u001B[0m, in \u001B[0;36mBaseCustomStrategy._call\u001B[0;34m(self, inputs, run_manager)\u001B[0m\n\u001B[1;32m    124\u001B[0m name_to_tool_map, color_mapping \u001B[38;5;241m=\u001B[39m get_tools_maps(\u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mtools)\n\u001B[1;32m    126\u001B[0m outputs \u001B[38;5;241m=\u001B[39m [\n\u001B[1;32m    127\u001B[0m     \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_return(output, intermediate_steps, run_manager\u001B[38;5;241m=\u001B[39mrun_manager)\n\u001B[1;32m    128\u001B[0m     \u001B[38;5;28;01mfor\u001B[39;00m output, intermediate_steps \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_run_strategy(\n\u001B[0;32m   (...)\u001B[0m\n\u001B[1;32m    133\u001B[0m     )\n\u001B[1;32m    134\u001B[0m ]\n\u001B[0;32m--> 136\u001B[0m \u001B[38;5;28;01mreturn\u001B[39;00m {key: [output[key] \u001B[38;5;28;01mfor\u001B[39;00m output \u001B[38;5;129;01min\u001B[39;00m outputs] \u001B[38;5;28;01mfor\u001B[39;00m key \u001B[38;5;129;01min\u001B[39;00m \u001B[43moutputs\u001B[49m\u001B[43m[\u001B[49m\u001B[38;5;241;43m0\u001B[39;49m\u001B[43m]\u001B[49m}\n",
+      "File \u001B[0;32m~/PycharmProjects/planning-library/planning_library/strategies/base_strategy.py:113\u001B[0m, in \u001B[0;36mBaseCustomStrategy._call\u001B[0;34m(self, inputs, run_manager)\u001B[0m\n\u001B[1;32m    103\u001B[0m \u001B[38;5;250m\u001B[39m\u001B[38;5;124;03m\"\"\"Run text through and get agent response.\"\"\"\u001B[39;00m\n\u001B[1;32m    105\u001B[0m outputs \u001B[38;5;241m=\u001B[39m [\n\u001B[1;32m    106\u001B[0m     \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_return(output, intermediate_steps, run_manager\u001B[38;5;241m=\u001B[39mrun_manager)\n\u001B[1;32m    107\u001B[0m     \u001B[38;5;28;01mfor\u001B[39;00m output, intermediate_steps \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_run_strategy(\n\u001B[0;32m   (...)\u001B[0m\n\u001B[1;32m    110\u001B[0m     )\n\u001B[1;32m    111\u001B[0m ]\n\u001B[0;32m--> 113\u001B[0m \u001B[38;5;28;01mreturn\u001B[39;00m {key: [output[key] \u001B[38;5;28;01mfor\u001B[39;00m output \u001B[38;5;129;01min\u001B[39;00m outputs] \u001B[38;5;28;01mfor\u001B[39;00m key \u001B[38;5;129;01min\u001B[39;00m \u001B[43moutputs\u001B[49m\u001B[43m[\u001B[49m\u001B[38;5;241;43m0\u001B[39;49m\u001B[43m]\u001B[49m}\n",
       "\u001B[0;31mIndexError\u001B[0m: list index out of range"
      ]
     }
    ],
    "source": [
-    "from planning_library.action_executors import GymnasiumActionExecutor\n",
-    "\n",
-    "\n",
-    "action_executor = GymnasiumActionExecutor(env)\n",
-    "\n",
-    "\n",
     "strategy_executor = TreeOfThoughtsDFSStrategy(\n",
-    "    tools=env.tools,\n",
     "    action_executor=action_executor,\n",
     "    max_iterations=max_num_steps,\n",
     "    return_intermediate_steps=True,\n",
@@ -350,10 +347,20 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2024-04-17T17:01:51.064275Z"
+     "end_time": "2024-04-26T09:49:55.725835Z",
+     "start_time": "2024-04-26T09:49:37.221299Z"
     }
    },
    "id": "3511e290e2ab0d52"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "32ddbbef3ecf819c"
   }
  ],
  "metadata": {
